<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MapViewActivity" >

    <com.lighthousesignal.fingerprint2.views.MapView
        android:id="@+id/map_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/button_scanClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/scan_clear" />

    <Button
        android:id="@+id/button_scanSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/map_image"
        android:layout_centerHorizontal="true"
        android:text="@string/scan_save"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_scanStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/map_image"
        android:layout_centerHorizontal="true"
        android:text="@string/scan_stop"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_scanStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/map_image"
        android:layout_centerHorizontal="true"
        android:text="@string/scan_start" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/map_image"
        android:layout_alignParentLeft="true"
        android:text="@string/map_view_home" />

    <TextView
        android:id="@+id/map_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/map_image"
        android:text="@string/map_info" />

    <CheckBox
        android:id="@+id/checkBox_scan_show_logs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map_image"
        android:layout_alignTop="@+id/map_image"
        android:text="@string/scan_show_logs" />

</RelativeLayout>