<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MapListActivity" >

    <TextView
        android:id="@+id/select_state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_state"
        android:layout_alignParentTop="true"
        android:text="@string/select_state" />
    
    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_state"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/select_building"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_state"
        android:layout_below="@+id/spinner_state"
        android:text="@string/select_building"
        android:visibility="invisible" />
    
	<Spinner
        android:id="@+id/spinner_building"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_floor"
        android:layout_below="@+id/select_building"
        android:visibility="invisible" />
	
	<TextView
        android:id="@+id/select_floor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_state"
        android:layout_below="@+id/spinner_building"
        android:text="@string/select_floor"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinner_floor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_floor"
        android:layout_below="@+id/select_floor"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_select_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/ok" />

</RelativeLayout>