<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linear_log_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_log_filter"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/log_filter" />

        <Spinner
            android:id="@+id/spinner_log_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_log_filter"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_sort_by"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by" />

        <Spinner
            android:id="@+id/spinner_sort_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner_sort_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_sort_by"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBox_multiple_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple_selection" />

        <Button
            android:id="@+id/button_multiple_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple_submit"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_checkbox"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/listView_filelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>