<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashActivity" android:background="#282828">

    <LinearLayout
            android:id="@+id/linear_layout_top"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:gravity="center" >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_view_logo"
                android:layout_margin="15dp"
                android:src="@drawable/ic_launcher"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lighthouse Signal Systems"
                android:id="@+id/text_view_lss"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true" android:layout_alignParentRight="true"
            android:layout_below="@+id/linear_layout_top" android:layout_gravity="center" android:gravity="center"
            android:id="@+id/linearLayout" android:layout_marginLeft="50dp" android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/login_fingerprint2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_fingerprint2" android:layout_margin="5dp"/>
        <Button
            android:id="@+id/login_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook" android:layout_margin="5dp"/>
    </LinearLayout>

</RelativeLayout>